<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientfile"
    tools:context=".Intent_one">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <TextView
        android:id="@+id/textView6"
        android:layout_width="374dp"
        android:layout_height="40dp"
        android:text="@string/rights_and_responsibilities"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/what_are_righs"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="76dp"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                app:srcCompat="@drawable/kids" />

            <TextView
        android:id="@+id/textView8"
        android:layout_width="393dp"
        android:layout_height="132dp"
        android:fontFamily="sans-serif"
        android:text="@string/rights"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="318dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="10dp"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="450dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
        <TextView
            android:id="@+id/textView11"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/cardfour"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/bulblight" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="531dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/cardone"
            android:textColor="@color/black"
            android:textSize="17sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/bulblight" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="608dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/cardtwo"
            android:textColor="@color/black"
            android:textSize="17sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/bulblight" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        tools:layout_editor_absoluteY="478dp"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/cardthree"
            android:textColor="@color/black"
            android:textSize="17sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/bulblight" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>