<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="47dp"
        android:text="@string/law_quiz"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="97dp"
        android:text="Your score: 27"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="2dp"
        android:text="High scorer: 50"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="65dp"
        android:text="1. Who makes rules at home?"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView14"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="98dp"
        android:text="@string/a_teachers"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textView17"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="12dp"
        android:text="@string/b_parents"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/c_government"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/d_friends"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="302dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        tools:ignore="MissingConstraints"
        tools:src="@tools:sample/avatars" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginBottom="200dp"
        android:ems="10"
        android:hint="@string/enter_your_answer"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="504dp"
        android:src="@drawable/p5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>