<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".intents.Intent_two">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/eyes"
        android:background="@color/black"
        tools:ignore="MissingConstraints" />
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="24dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/rounded_top_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Add your content here (TextViews, ImageViews, etc.) -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/responsibilities_of_children"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/icon_bulb" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/responsibilities"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:fontFamily="serif-monospace"
                    android:text="@string/let_s_learn"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="@color/teal_200"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="4dp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="3dp"
                    tools:layout_editor_absoluteY="450dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:text="@string/listen"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="170dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="210dp"
                    android:layout_marginTop="-100dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="3dp"
                    app:cardBackgroundColor="#B78455"
                    tools:layout_editor_absoluteY="450dp">

                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                        android:id="@+id/youtube_player_view2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="3dp"
                    app:cardBackgroundColor="#FF96E0"
                    tools:layout_editor_absoluteY="450dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:text="@string/kind"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="170dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="210dp"
                    android:layout_marginTop="-100dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="3dp"
                    app:cardBackgroundColor="#B78455"
                    tools:layout_editor_absoluteY="450dp">

                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                        android:id="@+id/youtube_player_view1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp"
                    app:cardBackgroundColor="@color/honeyhue"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="3dp"
                    tools:layout_editor_absoluteY="450dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:text="@string/chores"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="170dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="210dp"
                    android:layout_marginTop="-100dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="3dp"
                    app:cardBackgroundColor="#B78455"
                    tools:layout_editor_absoluteY="450dp">


                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                        android:id="@+id/youtube_player_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="3dp"
                    app:cardBackgroundColor="#B78455"
                    tools:layout_editor_absoluteY="450dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:text="@string/study"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>



            </LinearLayout>


        </ScrollView>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>