<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/govtboy"
    android:padding="16dp"
    tools:context=".intents.Intentthree">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="serif-monospace"
        android:text="@string/basic_structure_of_the_government"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/textView13"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="350dp"
                android:layout_height="120dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:padding="10dp"
                    android:text="What is a government?"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-20dp"
                    android:layout_marginTop="5dp"
                    android:padding="30dp"
                    android:text="@string/a_government_is_a_group_of_people_who_make_decisions_and_create_rules_to_help_run_a_country_state_or_community"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="350dp"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:padding="10dp"
                    android:text="@string/_3_main_government_parts"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/down_arrow" />

                <View
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="65dp"
                    android:background="@drawable/circle_bg" />

                <View
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="170dp"
                    android:background="@drawable/circle_bg" />

                <View
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="65dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/circle_bg" />
            </androidx.cardview.widget.CardView>

            <!-- Add more CardViews here -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1. Legislature"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginLeft="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-20dp"
                    android:layout_marginTop="5dp"
                    android:padding="30dp"
                    android:text="Makes the laws"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-20dp"
                    android:layout_marginTop="30dp"
                    android:padding="30dp"
                    android:text="Made up of people called legislators."
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp">

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp">

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>